Fixes: U4-8747 Actions menu button not aligned with heading input

--- a/src/Umbraco.Web.UI.Client/src/less/components/editor.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/editor.less
@@ -21,6 +21,9 @@
 	position: relative;
 }
 
+.umb-editor-header__actions-menu {
+	margin-left: auto;
+}
 
 .umb-editor-container {
 	position: relative;
